--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: All Creator Blog
 description: My Personal Blog
 author: Hyeok Jin Park
-logo: /hcz-jekyll-blog/static/img/avatar.png
+logo: /ParkHyeokJin.github.io/static/img/avatar.png
 github: https://github.com/ParkHyeokJin
 about: Java developer
 
