--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ keep_files:
 # Site settings
 title: Airspace
 subtitle: "A free HTML5 agency template"
-url: "https://comh.cf/" # the base hostname & protocol for your site
+url: "https://parkhyeokjin.github.io/" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-baseurl: "/airspace-jekyll"
+baseurl: "/parkhyeokjin.github.io"
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
