--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
 # Build settings
-# markdown: kramdown
-markdown: redcarpet
-redcarpet:
- extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+markdown: kramdown
+#markdown: redcarpet
+#redcarpet:
+# extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
