--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ plugins:
 # Site settings
 title: HyeokJin blog
 subtitle: "A free HTML5 agency template"
-url: "https://localhost:4000" # the base hostname & protocol for your site
+url: "https://ParkHyeokJin.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: ""
 cover: "/assets/cover.png"
